# fasteval-repl

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
