[package]
name = "fasteval-repl"
version = "0.0.1"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ujang360/fasteval-repl"
repository = "https://github.com/Ujang360/fasteval-repl"
documentation = "https://docs.rs/fasteval/"
description = """Fast evaluation of algebraic expressions"""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[dependencies]
fasteval = { version = "0.2.4", features = ["nightly"]}
